--- a/css/media.css
+++ b/css/media.css
@@ -11,14 +11,114 @@
     max-width: 738px;
   }
 
+  /* -----------------HEADER------------------- */
+
+  .header {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  }
+
+  .header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 0;
+    max-width: 1150px;
+  }
+
+  .header-navigation {
+    display: flex;
+    align-items: center;
+  }
+
+  .header-list {
+    display: flex;
+    align-items: flex-start;
+    gap: 40px;
+  }
+
+  .header-address {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    font-style: normal;
+  }
+
+  .header-menu-link {
+    color: var(--navyblue, #2e2f42);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding: 27px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .studio {
+    position: relative;
+    color: #404bbf;
+  }
+
+  .studio::after {
+    position: absolute;
+    left: 0;
+    content: "";
+    width: 100%;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+    bottom: -1px;
+  }
+
+  .header-menu-link:hover,
+  .header-menu-link:focus {
+    color: var(--color-ocean);
+  }
+
+  .header-address-link {
+    color: var(--slate, #434455);
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-address-link:hover,
+  .header-address-link:focus {
+    color: var(--color-ocean);
+  }
+
+  .header-menu-open {
+    display: none;
+  }
+
   /* ----------------HERO------------------- */
 
-.hero {
-  background-image: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
-    url(../images/section1/people-officetab.jpg);
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/section1/people-officetab.jpg);
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/section1/people-officetab2x.jpg);
+    }
+  }
 
   .hero-title {
     font-size: 56px;
@@ -63,13 +163,105 @@
   .customers-list {
     gap: 72px 24px;
   }
+
+  /* ----------------FOOTER------------------- */
+
+  .logofooter {
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 0px;
+    margin-bottom: 16px;
+  }
+
+  .footer-text {
+    max-width: 264px;
+  }
+  .footer-box {
+    justify-content: start;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: baseline;
+    margin-left: 108px;
+  }
+
+  .footer-logo-box {
+    align-items: start;
+    margin-right: 24px;
+  }
+
+  .footer-social-text {
+    text-align: left;
+  }
+
+  .footer-form-box {
+    margin-left: 0;
+    align-items: start;
+  }
+  .footer-form {
+    flex-direction: row;
+  }
+
+  .footer-form-input {
+    width: 264px;
+    padding-left: 16px;
+    background-color: transparent;
+  }
+
+  .footer-form-input::placeholder {
+    color: #ffffff;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+  }
 }
 
 /* -------------------------------DESKTOP---------------------------------- */
 
 @media screen and (min-width: 1158px) {
   .container {
-    max-width: 1158px;
+    max-width: 1440px;
+  }
+
+  /* -----------------HEADER------------------- */
+
+  .header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+
+  .header-container {
+    justify-content: center;
+    max-width: 1440px;
+    padding: 0 156px;
+  }
+
+  .header-navigation {
+    height: 24px;
+    margin-right: auto;
+  }
+
+  .header-address {
+    flex-direction: row;
+    gap: 40px;
+  }
+
+  .header-menu-link {
+    padding: 26px 0;
+  }
+
+  .header-address-item {
+    flex: shrink 0;
+    min-width: 151px;
+  }
+
+  .header-menu-link:hover,
+  .header-menu-link:focus {
+    color: var(--color-ocean);
+  }
+
+  .header-address-link {
+    font-size: 16px;
+    line-height: 1.5;
   }
 
   /* ----------------HERO------------------- */
@@ -81,6 +273,18 @@
       ),
       url(../images/section1/people-office.jpg);
     max-width: 1440px;
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/section1/people-office-2x.jpg);
+    }
   }
 
   .hero-title {
@@ -188,5 +392,36 @@
 
   .footer-logo-box {
     margin-right: 120px;
+  }
+
+  .logofooter {
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 0px;
+    align-items: center;
+    margin-bottom: 16px;
+  }
+
+  .footer-text {
+    max-width: 264px;
+  }
+  .footer-box {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+  }
+
+  .footer-social-box {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer-form-box {
+    margin-left: 80px;
+  }
+
+  .footer-form-input {
+    width: 264px;
+    padding-left: 16px;
   }
 }
