--- a/css/styles.css
+++ b/css/styles.css
@@ -87,14 +87,12 @@ img {
 
 .header-container {
   display: flex;
-  align-items: center;
+  margin-left: 16px;
 }
 
 .header-navigation {
   display: flex;
-  height: 24px;
-  align-items: center;
-  margin-right: auto;
+  height: 21px;
 }
 
 .logo {
@@ -109,15 +107,11 @@ img {
 }
 
 .header-list {
-  display: flex;
-  align-items: flex-start;
-  gap: 40px;
+  display: none;
 }
 
 .header-address {
-  display: flex;
-  gap: 40px;
-  font-style: normal;
+  display: none;
 }
 
 .logo-navy {
@@ -128,54 +122,130 @@ img {
   color: #f4f4fd;
 }
 
-.header-menu-link {
+.header-menu-open {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 24px;
+  right: 24px;
+  border: none;
+  background-color: transparent;
+}
+
+/* -----------------HEADER-MENU------------------- */
+.mob {
+  position: fixed;
+  top: 0;
+  background-color: #ffffff;
+  z-index: 20;
+  width: 100vw;
+  height: 100vh;
+  padding: 80px 35px 40px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.mob-menu-btn {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  background-color: #e7e9fc;
+  border-radius: 50%;
+  stroke-width: 1px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-menu-icon {
+}
+.mob-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.mob-menu-item {
+}
+.mob-menu-link {
   color: var(--navyblue, #2e2f42);
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   padding: 26px 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.studio {
-  position: relative;
-  color: #404bbf;
-}
-
-.studio::after {
-  position: absolute;
-  left: 0;
-  content: "";
-  width: 100%;
-  height: 4px;
-  background-color: #404bbf;
-  border-radius: 2px;
-  bottom: -1px;
-}
-
-.header-address-item {
-  flex: shrink 0;
-  min-width: 151px;
-}
-
-.header-menu-link:hover,
-.header-menu-link:focus {
+.mob-menu-link:hover,
+.mob-menu-link:focus {
   color: var(--color-ocean);
 }
 
-.header-address-link {
+.mob-address {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  font-style: normal;
+  margin-bottom: 24px;
+}
+
+.mob-address-item {
+  flex: shrink 0;
+  min-width: 151px;
+}
+.mob-address-link {
   color: var(--slate, #434455);
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-address-link:hover,
-.header-address-link:focus {
-  color: var(--color-ocean);
+.mob-address-link:hover,
+.mob-address-link:focus {
+  color: #4d5ae5;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+}
+
+.mob-sosial-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 56px;
+}
+.mob-sosial-item {
+  width: 40px;
+  height: 40px;
+}
+.mob-sosial-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-sosial-icon {
+  fill: #f4f4fd;
+}
+
+.mob-sosial-link:hover,
+.mob-sosial-link:focus {
+  background-color: #404bbf;
 }
 
 /* ----------------HERO------------------- */
@@ -201,7 +271,7 @@ img {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/section1/people-officemob.jpg);
+      url(../images/section1/people-officemob-x2.jpg);
   }
 }
 
@@ -216,6 +286,7 @@ img {
   margin: 0 auto;
   margin-bottom: 72px;
 }
+
 .hero-btn {
   background-color: #4d5ae5;
   color: var(--color-white);
@@ -416,38 +487,45 @@ img {
 }
 
 /* ----------------FOOTER------------------- */
+
+.logo {
+  margin-right: 0;
+}
+
 .footer {
   background-color: #2e2f42;
   color: var(--color-cloud);
   font-size: 16px;
-  font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  padding: 100px 0;
-}
-
-.footer-logo-box {
-  margin-right: 120px;
+  padding: 96px 0;
 }
 
 .logofooter {
-  display: flex;
-  flex-wrap: wrap;
-  padding-bottom: 0px;
-  align-items: center;
-  margin-bottom: 16px;
+  margin-bottom: 17px;
 }
 
 .footer-text {
-  max-width: 264px;
+  max-width: 268px;
 }
+
 .footer-box {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+}
+
+.footer-logo-box {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 0px;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 72px;
 }
 
 .footer-social-text {
   color: var(--white, #fff);
+  text-align: center;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -472,6 +550,7 @@ img {
   border-radius: 50%;
   background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-bottom: 72px;
 }
 
 .footer-social-box {
@@ -488,13 +567,9 @@ img {
   fill: #f4f4fd;
 }
 
-.footer-form-box {
-  display: flex;
-  flex-direction: column;
-}
-
 .footer-form-text {
   color: var(--white, #fff);
+  text-align: center;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -502,13 +577,15 @@ img {
   margin-bottom: 16px;
 }
 .footer-form-box {
-  margin-left: 80px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 .footer-form {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   gap: 24px;
 }
@@ -519,12 +596,12 @@ img {
   line-height: 1.5;
   letter-spacing: 0.04em;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  width: 264px;
+  width: 398px;
   height: 40px;
-  padding-left: 16px;
   background-color: transparent;
   border-radius: 4px;
   border: 1px solid #ffffff;
+  padding: 8px 16px;
 }
 
 .footer-form-input::placeholder {
@@ -558,6 +635,8 @@ img {
   margin-left: 16px;
   fill: #ffffff;
 }
+
+/* ----------------PORTFOLIO-HEADER------------------- */
 
 /* ----------------PORTFOLIO------------------- */
 
