--- a/css/media.css
+++ b/css/media.css
@@ -2,16 +2,24 @@
   .container {
     max-width: 426px;
   }
+
+  .mob-sosial-list {
+    gap: 56px;
+  }
 }
 
 /* -------------------------------TABLET---------------------------------- */
 
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 738px;
+    max-width: 768px;
   }
 
   /* -----------------HEADER------------------- */
+
+  .logo {
+    margin-right: 120px;
+  }
 
   .header {
     padding-top: 12px;
@@ -56,7 +64,7 @@
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding: 27px 0;
+    padding: 26.5px 0;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
@@ -135,8 +143,8 @@
   }
 
   .sectionone-item {
-    width: calc((100% - 24px) / 2);
   }
+
   .sectionone-subtitele {
     text-align: start;
   }
@@ -181,7 +189,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     align-items: baseline;
-    margin-left: 108px;
+    /* margin-left: 108px; */
   }
 
   .footer-logo-box {
@@ -194,11 +202,16 @@
   }
 
   .footer-form-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin-left: 0;
     align-items: start;
   }
   .footer-form {
-    flex-direction: row;
+    display: flex;
+    gap: 24px;
   }
 
   .footer-form-input {
@@ -223,6 +236,10 @@
   }
 
   /* -----------------HEADER------------------- */
+
+  .logo {
+    margin-right: 76px;
+  }
 
   .header {
     padding-top: 24px;
@@ -299,11 +316,9 @@
 
   .sectionone-list {
     gap: 24px;
+    justify-content: center;
   }
 
-  .sectionone-item {
-    width: calc((100% - 72px) / 4);
-  }
   .sectionone-subtitele {
     font-size: 20px;
     font-weight: 500;
@@ -339,11 +354,8 @@
   .our-work-list {
     display: flex;
     align-items: flex-start;
+    justify-content: center;
     gap: 24px;
-  }
-
-  .our-work-item {
-    width: calc((100% - 48px) / 3);
   }
 
   .our-work-title {
@@ -407,6 +419,7 @@
   }
   .footer-box {
     display: flex;
+    justify-content: center;
     flex-direction: row;
     align-items: baseline;
   }
