--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,6 @@ img {
 
 .header-container {
   display: flex;
-  margin-left: 16px;
 }
 
 .header-navigation {
@@ -223,7 +222,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 56px;
+  gap: 25px;
 }
 .mob-sosial-item {
   width: 40px;
@@ -246,6 +245,10 @@ img {
 .mob-sosial-link:hover,
 .mob-sosial-link:focus {
   background-color: #404bbf;
+}
+
+.blue {
+  color: #404bbf;
 }
 
 /* ----------------HERO------------------- */
@@ -321,7 +324,6 @@ img {
   display: flex;
   flex-wrap: wrap;
   gap: 72px;
-  flex: shrink 0;
 }
 
 .sectionone-subtitele {
@@ -576,19 +578,6 @@ img {
   letter-spacing: 0.02em;
   margin-bottom: 16px;
 }
-.footer-form-box {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.footer-form {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  gap: 24px;
-}
 
 .footer-form-input {
   color: #ffffff;
@@ -596,12 +585,13 @@ img {
   line-height: 1.5;
   letter-spacing: 0.04em;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  width: 398px;
+  width: 100%;
   height: 40px;
   background-color: transparent;
   border-radius: 4px;
   border: 1px solid #ffffff;
   padding: 8px 16px;
+  margin-bottom: 24px;
 }
 
 .footer-form-input::placeholder {
@@ -621,6 +611,7 @@ img {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
+  margin: 0 auto;
   letter-spacing: 0.04em;
   cursor: pointer;
   min-width: 165px;
@@ -807,12 +798,15 @@ img {
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
+  width: 95%;
+  max-width: 392px;
+  height: 95%;
+  max-height: 584px;
+  overflow: scroll;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 408px;
-  min-height: 584px;
   border-radius: 4px;
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
